@@ -514,7 +514,8 @@ Debería aumentar total_height si es necesario
 -bugs Atic atac:
 ok *flashlight effect on blue dark room: I have to check the "smooth scroll" bit you told me some days ago. maybe that's the cause for that bug
 ok *swag room: all objects are visible. LAYER 2 has all the objects in colour, the tilemap is used to hide them to a mono-yellow silhouette.
-*seems also some sprites (objects like food) are not clipped well when the scroll makes the object at the border of the display. I think I'm clipping all the sprite
+ok *seems also some sprites (objects like food) are not clipped well when the scroll makes the object at the border of the display. I think I'm clipping all the sprite
+*enemigos parece que no te quitan energia hasta que te tocan al mitad del cuerpo. Si te tocan en la cabeza no quitan energia. normal?
 
 
 
@@ -533,3 +534,7 @@ ok *swag room: all objects are visible. LAYER 2 has all the objects in colour, t
 
 -probar si modo (o bit?) de tiles over ula funciona
 
+-Tiles no se están guardando en snapshot .zsf? Probar con test core305B
+
+-Efecto para sensores esfera 3D
+Parecido al muelle que salta
